// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`TabGroup should render the component correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative flex items-center gap-1 rounded-lg border border-neutral-200 p-1 dark:border-white/20"
      >
        <div
          class="absolute top-1 left-1 h-7 w-7 rounded-md shadow transform transition-transform duration-200 ease-in-out translate-x-[0rem] bg-black dark:bg-white"
          data-testid="selected-indicator"
        />
        <button
          aria-label="1 button"
          class="relative z-10 flex h-7 w-7 items-center justify-center text-xs hover:cursor-pointer text-white dark:text-black"
        >
          <pre>
            Option 1
          </pre>
        </button>
        <button
          aria-label="2 button"
          class="relative z-10 flex h-7 w-7 items-center justify-center text-xs text-neutral-600 hover:cursor-pointer dark:text-white"
        >
          <pre>
            Option 2
          </pre>
        </button>
        <button
          aria-label="3 button"
          class="relative z-10 flex h-7 w-7 items-center justify-center text-xs text-neutral-600 hover:cursor-pointer dark:text-white"
        >
          <pre>
            Option 3
          </pre>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative flex items-center gap-1 rounded-lg border border-neutral-200 p-1 dark:border-white/20"
    >
      <div
        class="absolute top-1 left-1 h-7 w-7 rounded-md shadow transform transition-transform duration-200 ease-in-out translate-x-[0rem] bg-black dark:bg-white"
        data-testid="selected-indicator"
      />
      <button
        aria-label="1 button"
        class="relative z-10 flex h-7 w-7 items-center justify-center text-xs hover:cursor-pointer text-white dark:text-black"
      >
        <pre>
          Option 1
        </pre>
      </button>
      <button
        aria-label="2 button"
        class="relative z-10 flex h-7 w-7 items-center justify-center text-xs text-neutral-600 hover:cursor-pointer dark:text-white"
      >
        <pre>
          Option 2
        </pre>
      </button>
      <button
        aria-label="3 button"
        class="relative z-10 flex h-7 w-7 items-center justify-center text-xs text-neutral-600 hover:cursor-pointer dark:text-white"
      >
        <pre>
          Option 3
        </pre>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`TabGroup should render the component correctly 2`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="relative flex items-center gap-1 rounded-lg border border-neutral-200 p-1 dark:border-white/20"
      >
        <div
          class="absolute top-1 left-1 h-7 w-7 rounded-md shadow transform transition-transform duration-200 ease-in-out translate-x-[0rem] bg-black dark:bg-white"
          data-testid="selected-indicator"
        />
        <button
          aria-label="1 button"
          class="relative z-10 flex h-7 w-7 items-center justify-center text-xs hover:cursor-pointer text-white dark:text-black"
        >
          <pre>
            Option 1
          </pre>
        </button>
        <button
          aria-label="2 button"
          class="relative z-10 flex h-7 w-7 items-center justify-center text-xs text-neutral-600 hover:cursor-pointer dark:text-white"
        >
          <pre>
            Option 2
          </pre>
        </button>
        <button
          aria-label="3 button"
          class="relative z-10 flex h-7 w-7 items-center justify-center text-xs text-neutral-600 hover:cursor-pointer dark:text-white"
        >
          <pre>
            Option 3
          </pre>
        </button>
      </div>
    </div>
    <div>
      <div
        class="relative flex items-center gap-1 rounded-lg border border-neutral-200 p-1 dark:border-white/20"
      >
        <div
          class="absolute top-1 left-1 h-7 w-7 rounded-md shadow transform transition-transform duration-200 ease-in-out translate-x-[0rem] bg-rose-600"
          data-testid="selected-indicator"
        />
        <button
          aria-label="1 button"
          class="relative z-10 flex h-7 w-7 items-center justify-center text-xs hover:cursor-pointer dark:text-white text-white"
        >
          <pre>
            Option 1
          </pre>
        </button>
        <button
          aria-label="2 button"
          class="relative z-10 flex h-7 w-7 items-center justify-center text-xs text-neutral-600 hover:cursor-pointer dark:text-white"
        >
          <pre>
            Option 2
          </pre>
        </button>
        <button
          aria-label="3 button"
          class="relative z-10 flex h-7 w-7 items-center justify-center text-xs text-neutral-600 hover:cursor-pointer dark:text-white"
        >
          <pre>
            Option 3
          </pre>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="relative flex items-center gap-1 rounded-lg border border-neutral-200 p-1 dark:border-white/20"
    >
      <div
        class="absolute top-1 left-1 h-7 w-7 rounded-md shadow transform transition-transform duration-200 ease-in-out translate-x-[0rem] bg-rose-600"
        data-testid="selected-indicator"
      />
      <button
        aria-label="1 button"
        class="relative z-10 flex h-7 w-7 items-center justify-center text-xs hover:cursor-pointer dark:text-white text-white"
      >
        <pre>
          Option 1
        </pre>
      </button>
      <button
        aria-label="2 button"
        class="relative z-10 flex h-7 w-7 items-center justify-center text-xs text-neutral-600 hover:cursor-pointer dark:text-white"
      >
        <pre>
          Option 2
        </pre>
      </button>
      <button
        aria-label="3 button"
        class="relative z-10 flex h-7 w-7 items-center justify-center text-xs text-neutral-600 hover:cursor-pointer dark:text-white"
      >
        <pre>
          Option 3
        </pre>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
